-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
In the Linux kernel, it seems that dentry_open() with O_TRUNC flag (i.e. Ext4) does not take effect to truncate the size of the PCC copy to zero.
This may result in incorrect size for PCC copy in the following test cases:
- Attach a file with size of s1 (s2 > 0) into PCC;
- detach this file with --keep option, and the data will retain on PCC;
- truncate this file locally or on an remote client to the size s2 (s2 < s1);
- re-attach the file again.
This problem is solved by reset the file size of the PCC copy to 0 after open the PCC copy during attach.